<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_listselector"
    android:paddingBottom="10.0dip"
    android:paddingTop="5.0dip"
    >
  <TextView
      android:id="@+id/rank_num"
      android:text="@string/room_contributor_rank"
      style="@style/gift_contributor_rank"
      />


  <com.ilikezhibo.ggzb.xiangmu.RoundImageView
      android:id="@id/user_portrait"
      android:layout_width="60.0dip"
      android:layout_height="60.0dip"
      android:layout_centerHorizontal="true"
      android:layout_centerVertical="false"
      android:layout_marginTop="26.0dip"
      android:src="@drawable/default_head"
      />
  <ImageView
      android:id="@+id/img_rank_bg"
      android:layout_width="100dp"
      android:layout_height="100dp"
      android:contentDescription="@string/app_name"
      android:src="@drawable/me_yp_no_1"
      android:layout_centerHorizontal="true"
      />
  <com.ilikezhibo.ggzb.xiangmu.RoundImageView
      android:id="@id/img_user_type"
      android:layout_alignBottom="@id/user_portrait"
      android:layout_alignRight="@id/user_portrait"
      android:layout_marginBottom="10.0dip"
      android:layout_marginRight="-5.0dip"
      style="@style/cell_useritem_usertype"
      />
  <LinearLayout
      android:id="@id/name_gender"
      android:layout_below="@id/img_rank_bg"
      style="@style/gift_contributor_name_gender"
      >
    <TextView
        android:id="@id/txt_username"
        android:text="@string/userhome_nickname_default"
        style="@style/cell_useritem_username"
        />
    <ImageView
        android:id="@id/img_gender"
        android:contentDescription="@string/app_name"
        style="@style/cell_useritem_gender_img"
        />
    <RelativeLayout
        android:id="@+id/grade_ly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="3dp"
        android:layout_marginTop="1.5dp"
        android:gravity="center_vertical"
        android:background="@drawable/icon_medal_32_1"
        >
      <TextView
          android:id="@+id/grade_tv"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentTop="true"
          android:layout_centerVertical="true"
          android:layout_marginRight="3dp"
          android:gravity="center_vertical"
          android:singleLine="true"
          android:text="130"
          android:textColor="@color/white"
          android:textSize="12sp"
          />
    </RelativeLayout>
  </LinearLayout>
  <TextView
      android:id="@id/txt_coin_count"
      android:layout_below="@id/name_gender"
      android:text="@string/room_contributor_contribution"
      style="@style/gift_contributor_coin_count"
      />
</RelativeLayout>