<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/room_manager_dialog"
    android:layout_height="fill_parent"
    android:background="@color/live_finish_bg"
    android:gravity="bottom"
    android:orientation="vertical"
    style="@style/oper_dialog_container"
    >
  <TextView
      android:id="@+id/txt_reset_data"
      android:gravity="center"
      android:text="重置信息"
      style="@style/live_finish_follow_btn"
      android:visibility="gone"
      />
  <TextView
      android:id="@+id/txt_forbid_login"
      android:gravity="center"
      android:text="封设备"
      style="@style/live_finish_follow_btn"
      android:visibility="gone"
      />
  <TextView
      android:id="@+id/txt_setmanage"
      android:gravity="center"
      android:text="@string/room_roomuser_setmanage"
      style="@style/live_finish_follow_btn"
      />
  <TextView
      android:id="@+id/txt_removemanage"
      android:gravity="center"
      android:text="删除管理"
      android:visibility="gone"
      style="@style/live_finish_follow_btn"
      />
  <TextView
      android:id="@+id/txt_report"
      android:gravity="center"
      android:text="举报"
      android:visibility="gone"
      style="@style/live_finish_follow_btn"
      android:textColor="@color/red"
      />
  <TextView
      android:id="@+id/txt_managelist"
      android:gravity="center"
      android:text="@string/room_roomuser_managelist"
      style="@style/live_finish_follow_btn"
      />
  <TextView
      android:id="@+id/txt_reportorfbchat"
      android:gravity="center"
      android:text="@string/room_roomuser_forbidchat"
      style="@style/live_finish_follow_btn"
      />
  <TextView
      android:id="@+id/txt_remove_gag"
      android:gravity="center"
      android:text="解除禁言"
      style="@style/live_finish_follow_btn"
      />
  <TextView
      android:id="@+id/txt_cancel"
      android:layout_marginBottom="20.0dip"
      android:gravity="center"
      android:text="取消"
      style="@style/live_finish_follow_btn"
      />
</LinearLayout>