<?xml version="1.0" encoding="utf-8"?>
<!--<LinearLayout-->
    <!-- -->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:orientation="horizontal"-->
    <!-->-->
  <!--<LinearLayout-->
      <!--android:layout_width="50dp"-->
      <!--android:layout_height="match_parent"-->
      <!--></LinearLayout>-->
  <RelativeLayout
      xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="@dimen/room_userinfo_width"
      android:layout_height="wrap_content"
      android:background="@drawable/bg_room_userinfodialog"
      android:gravity="center"
      android:paddingBottom="5.0dip"
      android:paddingTop="10.0dip"
      >
    <RelativeLayout
        android:id="@+id/title_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/room_userdialog_leftpadding"
        android:paddingRight="@dimen/room_userdialog_leftpadding"
        >
      <TextView
          android:id="@+id/img_report"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignBottom="@id/img_close"
          android:layout_alignTop="@id/img_close"
          android:text="@string/room_roomuser_manage"
          android:textColor="@color/theme_main_2"
          android:visibility="gone"
          android:textSize="16.0sp"
          />
      <!-- <com.hrbhzkj.xinxiu.avsdk.CircularImageButton-->
      <ImageView
          android:id="@+id/img_close"
          android:layout_width="@dimen/room_userinfo_report_height"
          android:layout_height="@dimen/room_userinfo_report_height"
          android:layout_alignParentRight="true"
          android:layout_marginTop="5.0dip"
          android:src="@drawable/room_pop_up_shut"
          />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/user_portrait_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_container"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        >
      <!--<com.hrbhzkj.xinxiu.avsdk.CircularImageButton-->
      <com.ilikezhibo.ggzb.avsdk.CircularImageButton
          android:id="@+id/user_portrait"
          android:layout_width="85.0dip"
          android:layout_height="85.0dip"
          android:layout_centerHorizontal="true"
          android:layout_margin="6.0dip"
          android:background="@drawable/control_circle_bg"
          android:padding="6.0dip"
          android:src="@drawable/default_head"
          />
      <ImageView
          android:id="@+id/img_user_type"
          android:layout_width="20.0dip"
          android:layout_height="20.0dip"
          android:layout_alignBottom="@id/user_portrait"
          android:layout_alignRight="@id/user_portrait"
          android:layout_marginBottom="6.0dip"
          android:layout_marginRight="6.0dip"
          android:contentDescription="@string/app_name"
          />
      <LinearLayout
          android:id="@+id/mvp_layout"
          android:layout_width="44.0dip"
          android:layout_height="44.0dip"
          android:layout_alignRight="@id/user_portrait"
          android:layout_alignTop="@id/user_portrait"
          android:layout_marginRight="117.0dip"
          android:layout_marginTop="77.0dip"
          android:background="@drawable/control_circle_bg"
          android:gravity="center"
          android:visibility="invisible"
          >
        <ImageView
            android:id="@+id/mvp_portrait"
            android:layout_width="36.0dip"
            android:layout_height="36.0dip"
            android:src="@drawable/default_head"
            />
      </LinearLayout>
      <TextView
          android:id="@+id/txt_manage"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentRight="true"
          android:layout_marginRight="30.0dip"
          android:layout_marginTop="20.0dip"
          android:text="管理"
          android:textColor="#ff00a2e8"
          android:visibility="invisible"
          />
      <View
          android:id="@+id/circle_to_mvp"
          android:layout_width="11.0dip"
          android:layout_height="11.0dip"
          android:layout_alignRight="@id/user_portrait"
          android:layout_alignTop="@id/user_portrait"
          android:layout_marginRight="103.0dip"
          android:layout_marginTop="76.0dip"
          android:background="@drawable/control_circle_bg"
          android:visibility="invisible"
          />
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/uesrname_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_portrait_container"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/room_user_name_margintop"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >
      <TextView
          android:id="@+id/txt_username"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:ellipsize="end"
          android:gravity="center"
          android:maxWidth="160.0dip"
          android:singleLine="true"
          android:text="BBBB"
          android:textColor="@color/room_userinfo_nick"
          android:textSize="18.0sp"
          />
      <ImageView
          android:id="@+id/img_gender"
          android:layout_width="18.0sp"
          android:layout_height="18.0sp"
          android:layout_marginLeft="5.0sp"
          android:contentDescription="@string/app_name"
          android:scaleType="fitXY"
          android:src="@drawable/global_female"
          />
      <ImageView
          android:id="@+id/img_level"
          android:layout_width="39.0sp"
          android:layout_height="18.0sp"
          android:layout_marginLeft="5.0dip"
          android:contentDescription="@string/app_name"
          android:src="@drawable/rank_1"
          />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/info_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/uesrname_container"
        android:orientation="vertical"
        android:paddingLeft="@dimen/room_userdialog_leftpadding"
        android:paddingRight="@dimen/room_userdialog_leftpadding"
        >
      <LinearLayout
          android:id="@+id/location_container"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:layout_marginTop="6.0dip"
          android:gravity="center_vertical"
          android:orientation="horizontal"
          >
        <ImageView
            android:id="@+id/img_location"
            android:layout_width="10.0sp"
            android:layout_height="13.0sp"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY"
            android:src="@drawable/room_pop_up_location"
            />
        <TextView
            android:id="@+id/txt_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5.0dip"
            android:gravity="center_vertical"
            android:paddingBottom="3.0dip"
            android:text="TianJin"
            android:textColor="@color/cell_userlist_tip"
            android:textSize="13.0sp"
            />
      </LinearLayout>
      <TextView
          android:id="@+id/txt_verify_reason"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:layout_marginTop="0.0dip"
          android:text="认证：产品经理"
          android:textColor="@color/room_userinfo_nick"
          android:textSize="13.0sp"
          />
      <TextView
          android:id="@+id/txt_desc"
          android:text="KAKA产品经理"
          android:textColor="@color/room_userinfo_nick"
          style="@style/room_userinfo_dialog_userdesc"
          />
    </LinearLayout>
    <TableLayout
        android:id="@+id/friends_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/info_container"
        android:layout_marginBottom="25.0dip"
        android:layout_marginTop="25.0dip"
        android:stretchColumns="*"
        >
      <TableRow>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1.0"
            android:orientation="vertical"
            >
          <TextView
              android:id="@+id/txt_follows"
              android:text="@string/userinfo_follows"
              style="@style/room_userinfo_dialog_relation"
              />
          <LinearLayout
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="left"
              android:layout_marginTop="6.0dip"
              android:gravity="center_vertical"
              android:orientation="horizontal"
              >
            <TextView
                android:id="@+id/txt_out_gold"
                android:text="@string/userinfo_out_gold"
                android:textColor="@color/dm_red"
                style="@style/room_userinfo_dialog_relation"
                />
            <ImageView
                android:id="@+id/img_balance_icon"
                android:layout_width="18.0sp"
                android:layout_height="12.0sp"
                android:contentDescription="@string/app_name"
                android:paddingLeft="3.0dip"
                style="@style/charinfor_balance_img"
                />
          </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1.0"
            android:orientation="vertical"
            >
          <TextView
              android:id="@+id/txt_fans"
              android:text="@string/userinfo_fans"
              style="@style/room_userinfo_dialog_relation"
              />
          <TextView
              android:id="@+id/txt_gain"
              android:layout_marginTop="6.0dip"
              android:text="@string/userinfo_gain"
              style="@style/room_userinfo_dialog_relation"
              />
        </LinearLayout>
      </TableRow>
    </TableLayout>
    <View
        android:id="@+id/button_divider"
        android:layout_below="@id/friends_container"
        style="@style/line_divider"
        />
    <LinearLayout
        android:id="@+id/buttons_container"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/room_userinfo_bottom_height"
        android:layout_below="@id/button_divider"
        android:orientation="horizontal"
        >
      <Button
          android:id="@+id/btn_follow"
          android:text="@string/userhome_add_attention"
          style="@style/room_userinfo_bottom_btn"
          />
      <View
          android:id="@+id/divider_private_chat"
          style="@style/room_userinfo_bottom_line"
          />
      <Button
          android:id="@+id/btn_private_chat"
          android:text="@string/userhome_private_chat"
          style="@style/room_userinfo_bottom_btn"
          android:visibility="gone"
          />
      <View
          android:id="@+id/divider_reply"
          style="@style/room_userinfo_bottom_line"
          android:visibility="gone"
          />
      <Button
          android:id="@+id/btn_reply"
          android:text="@string/userhome_room_reply"
          style="@style/room_userinfo_bottom_btn"
          />
      <View
          android:id="@+id/divider_goto_home"
          style="@style/room_userinfo_bottom_line"
          android:visibility="gone"
          />
      <Button
          android:id="@+id/btn_goto_home"
          android:text="@string/userhome_goto_home"
          style="@style/room_userinfo_bottom_btn"
          android:visibility="gone"
          />
    </LinearLayout>
  </RelativeLayout>
  <!--<LinearLayout-->
      <!--android:layout_width="50dp"-->
      <!--android:layout_height="match_parent"-->
      <!--></LinearLayout>-->
<!--</LinearLayout>-->